Fix scrollbar and new sortable table

--- a/src/assets/css/UI.component.css
+++ b/src/assets/css/UI.component.css
@@ -59,6 +59,25 @@
 	box-shadow: none;
 }
 
+.sortable:after,
+.sortable .desc-sort:after {
+	position: absolute;
+	right: 5px;
+	opacity: 0.5;
+}
+
+.sortable:after {
+	content: "▾";
+}
+
+.sortable.desc-sort:after {
+	content: "▴" !important;
+}
+
+.sortable.active:after {
+	opacity: 1;
+}
+
 /* Light Style Table */
 .table-light {
 	color: #666;
@@ -492,11 +511,11 @@ textarea {
 
 .scroll-content {
 	position: relative;
-	-webkit-transition: -webkit-transform .2s;
-	-moz-transition: -moz-transform .2s;
-	-ms-transition: -ms-transform .2s;
-	-o-transition: -o-transform .2s;
-	transition: transform .2s;
+	-webkit-transition: -webkit-transform .05s;
+	-moz-transition: -moz-transform .05s;
+	-ms-transition: -ms-transform .05s;
+	-o-transition: -o-transform .05s;
+	transition: transform .05s;
 }
 
 /* Tooltip */
